<resources>
    <string name="app_name">MrMini</string>
    <string name="info">Info video</string>
    <string name="settings">Indstillinger</string>
    <string name="scanner">Prøv MR scanneren</string>
    <string name="spil">Sjov og spas</string>
    <string name="player_error">Error initializing YouTube player: %s</string>
    <string name="about_app">
        Used image from https://tineye.com/search/7eeb00a7d604769b8cb2967fe4070ef2194c7808/ as a placeholder with unclear copyright permissions - to be replaced.
    </string>
    <string name="player_error">Error initializing YouTube player: %s</string>
    <string name="about_app">
        Used image from https://tineye.com/search/7eeb00a7d604769b8cb2967fe4070ef2194c7808/ as a placeholder with unclear copyright permissions - to be replaced.
    </string>
    <string name="about_app">
        Used image from https://tineye.com/search/7eeb00a7d604769b8cb2967fe4070ef2194c7808/ as a placeholder with unclear copyright permissions - to be replaced.
    </string>
    <string name="player_error">Error initializing YouTube player: %s</string>
    <string name="about_app">
        Used image from https://tineye.com/search/7eeb00a7d604769b8cb2967fe4070ef2194c7808/ as a placeholder with unclear copyright permissions - to be replaced.
    </string>
    <string name="loginName">Skriv dit navn her</string>
    <string name="rememberMe">Husk mig</string>
    <string name="logBut">Login</string>
    <string name="noLogBut">Fortsæt uden login</string>
    <string name="pref_catSound">Lydniveau</string>
    <string name="pref_sum_mute">Slå lyden fra</string>
    <string name="pref_title_mute">Mute</string>
    <string name="pref_title_hospital">Skift hospital</string>
    <string name="noHosp">Intet hospital</string>
    <string name="pref_catHospital">Hospital</string>
    <string name="logout">Log ud</string>
    <string name="pref_sum_logout">Tryk her for at logge ud</string>
    <string-array name="hospitalList">
        <item>@string/noHosp</item>
        <item>Gentofte</item>
        <item>Herlev</item>
        <item>Rigshospitalet</item>
    </string-array>
    <string-array name="hospitalSetting">
        <item>@string/noHosp</item>
        <item>Gentofte</item>
        <item>Herlev</item>
        <item>Rigshospitalet</item>
    </string-array>
</resources>
